--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "au-input",
+  "name": "itn-input",
   "version": "1.3.1",
-  "description": "au-input",
-  "main": "./au-input.umd.js",
-  "module": "./au-input.es5.js",
-  "es2015": "./au-input.js",
-  "typings": "./au-input.d.ts",
+  "description": "itn-input",
+  "main": "./itn-input.umd.js",
+  "module": "./itn-input.es5.js",
+  "es2015": "./itn-input.js",
+  "typings": "./itn-input.d.ts",
   "author": "",
   "license": "MIT",
   "repository": {},
