--- a/src/demo/tsconfig.json
+++ b/src/demo/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "paths": {
-      "au-input": [
+      "itn-input": [
         "../lib"
       ]
     }
